--- a/li/index.html
+++ b/li/index.html
@@ -88,7 +88,7 @@
 				</div>
 				<div id="simulation">
 					<div id="simulation_wrapper">
-						<h3>Simulation</h3>
+						<h3>Simulation LivesImproved Year End</h3>
 						<div id="section1">
 							<h4>Sales</h4>
 							<input id="slidersales" type="range" min="-20" max="30" value="0" step="0.1" class="philips"><div class="slider_value" id="value_sales">0%</div>		
