migrated the simulator and centralised authentication detection in psv function

--- a/li/index.html
+++ b/li/index.html
@@ -108,6 +108,9 @@
 							</div>
 						</div>
 					</div>
+					<div id="simulation_error_wrapper">
+						
+					</div>
 				</div>
 			</div>
 			<div id="menu_bar">
