--- a/html/data/faq.html
+++ b/html/data/faq.html
@@ -1,6 +1,6 @@
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq1">What is Lives Improved?</div>
-	<div class="faq_content" id="faq1content">
+	<div class="faq_header" id="faq1" onclick="objExplain.showfaqcontent(this, 'faq1content')">What is Lives Improved?</div>
+	<div class="faq_content selected" id="faq1content">
 		<p>
 		Philips states in its mission that "we strive to make the world healthier and more sustainable through innovation. Our goal is to improve the lives of 3 billion people a year by 2025."
 		</p>
@@ -17,7 +17,7 @@
 </div>
 
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq2">What are Care products?</div>
+	<div class="faq_header" id="faq2" onclick="objExplain.showfaqcontent(this, 'faq2content')">What are Care products?</div>
 	<div class="faq_content" id="faq2content">
 		<p>
 		Philips Care Products are professional products and services that have a direct positive impact on a person’s health. At this moment, only products from the sector Healthcare fall in this category.
@@ -27,7 +27,7 @@
 
 
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq3">What are Well-being products?</div>
+	<div class="faq_header" id="faq3" onclick="objExplain.showfaqcontent(this, 'faq3content')">What are Well-being products?</div>
 	<div class="faq_content" id="faq3content">
 		<p>
 		Philips Well-being products and solutions enable people to live healthier lives. By this we mean providing consumers with tools to make healthier choices, e.g. when preparing food (Air fryer, Juicer, Blender); to care for their physical and mental health (Mother &amp; Childcare, Oral Health Care, Light therapy); to create a healthy home environment (Air purification). At this moment, only products from the sector Consumer Lifestyle fall in this category.
@@ -36,7 +36,7 @@
 </div>
 
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq4">What are Green products?</div>
+	<div class="faq_header" id="faq4" onclick="objExplain.showfaqcontent(this, 'faq4content')">What are Green products?</div>
 	<div class="faq_content" id="faq4content">
 		<p>
 		Philips Green Products have proven best-in-class eco-performance as defined in the Philips Green Product definition. They offer a significant environmental improvement (>10%), or outperform product-specific eco-performance requirements (e.g. regulatory), or are rewarded with a recognized eco-performance label, and meet sector green product specific minimum requirements.
@@ -45,7 +45,7 @@
 </div>
 
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq5">What is double count?</div>
+	<div class="faq_header" id="faq5" onclick="objExplain.showfaqcontent(this, 'faq5content')">What is double count?</div>
 	<div class="faq_content" id="faq5content">
 		<p>
 		Double count refers to multiple different product touches per individual. For example one person may own a Philips Green LED lamp and a Philips Senseo Viva Café Eco, and undergo treatment by Philips Healthcare equipment; this person will only be counted once in the model instead of three times.
@@ -57,7 +57,7 @@
 </div>
 
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq6">What can I do with this app?</div>
+	<div class="faq_header" id="faq6" onclick="objExplain.showfaqcontent(this, 'faq6content')">What can I do with this app?</div>
 	<div class="faq_content" id="faq6content">
 		<p>
 		The Lives Improved app gives you the actual status of Lives Improved, this allows you to track progress against the targets that have been set. You can make a selection of organizational and geographical filters to get details that are relevant to you. 
@@ -70,7 +70,7 @@
 </div>
 
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq7">How do the sliders work?</div>
+	<div class="faq_header" id="faq7" onclick="objExplain.showfaqcontent(this, 'faq7content')">How do the sliders work?</div>
 	<div class="faq_content" id="faq7content">
 		<p>
 		The 'slider functionality' always calculates Lives Improved based on a full calendar year time frame, i.e. FY2013. The app uses YTD actual sales data and complements this with last year’s sales data for the remaining months in the current year to get a full calendar year worth of data.
@@ -82,7 +82,7 @@
 </div>
 
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq8">When will the latest sales data become available?</div>
+	<div class="faq_header" id="faq8" onclick="objExplain.showfaqcontent(this, 'faq8content')">When will the latest sales data become available?</div>
 	<div class="faq_content" id="faq8content">
 		<p>
 		The data in the app is updated on a monthly basis. This will be done in the week following the Month-end close.
@@ -91,7 +91,7 @@
 </div>
 
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq9">How will I know when new data is available?</div>
+	<div class="faq_header" id="faq9" onclick="objExplain.showfaqcontent(this, 'faq9content')">How will I know when new data is available?</div>
 	<div class="faq_content" id="faq9content">
 		<p>
 		When new data is available and you open the app, a clear message will tell you that the data has been updated.
@@ -101,7 +101,7 @@
 
 
 <div class="faq_wrapper">
-	<div class="faq_header" id="faq10">Who can I contact if I have any questions or remarks?</div>
+	<div class="faq_header" id="faq10" onclick="objExplain.showfaqcontent(this, 'faq10content')">Who can I contact if I have any questions or remarks?</div>
 	<div class="faq_content" id="faq10content">
 		<p>
 		You can contact Group Sustainability in case of any questions. Please send an email to <a href="mailto:sustainability@philips.com">sustainability@philips.com</a>.
