fix for breadcrumb

--- a/html/data/faq.html
+++ b/html/data/faq.html
@@ -1,6 +1,6 @@
 <div class="faq_wrapper">
 	<div class="faq_header" id="faq1" onclick="objExplain.showfaqcontent(this, 'faq1content')">What is Lives Improved?</div>
-	<div class="faq_content selected" id="faq1content">
+	<div class="faq_content" id="faq1content">
 		<p>
 		Philips states in its mission that "we strive to make the world healthier and more sustainable through innovation. Our goal is to improve the lives of 3 billion people a year by 2025."
 		</p>
