--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,9 @@
 					<div class="info_wrapper">
 						<div id="region_name" onclick="location.reload();"></div>
 						<div id="filter_breadcrumb_wrapper">
-							<div id="filter_breadcrumb"></div>
+							<div id="">
+								<span id="filter_breadcrumb"></span>
+							</div>
 						</div>
 					</div>
 				</div>
