--- a/html/index.html
+++ b/html/index.html
@@ -47,7 +47,7 @@
 								<g transform="translate(20,0)">
 									<text id="lives_improved_percentage" x="140" y="210" fill="#000">100%</text>
 									<text id="lives_improved_percentage_sub" x="0" y="220" fill="#000" width="200">
-										<tspan x="7.3em" dy="1.1em">of population</tspan>
+										<tspan x="5.3em" dy="1.1em">of population</tspan>
 									</text>
 								</g>
 							  </g>
@@ -147,7 +147,7 @@
 					<div id="btn_bmc" onclick="objOruFilter.selectoru(this, 3);" class="selected">Market</div>
 					<div id="btn_country" onclick="objOruFilter.selectoru(this, 4);">Country</div>
 				</div>
-				<h4>Select sector filter:</h4>
+				<h4>Select business filter:</h4>
 				<div id="filter_container"></div> 
 				<h4>Select activity filter:</h4>
 				<div id="activity_filter_container">
