new version of sliding header

--- a/html/index.html
+++ b/html/index.html
@@ -193,6 +193,7 @@
 		<script type="text/javascript" src="js/lib/TweenLite.js">//</script>
 		<script type="text/javascript" src="js/lib/hammer.js">//</script>
 		<script type="text/javascript" src="js/lib/sizzle.min.js">//</script>	
+		<script type="text/javascript" src="js/lib/marquee.js">//</script>	
 		
 		<!-- Helper files files -->		
 		<script type="text/javascript" src="js/helpers/utils.js">//</script>
