--- a/html/index.html
+++ b/html/index.html
@@ -34,59 +34,65 @@
 						</div>
 					</div>				
 				</div>
-				<div id="region_info" onclick="objHeader.btnbackclick();">
-					<div class="svg_wrapper">
-						<div id="holder">
-							<svg id="svg_circle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="80%" height="80%" viewBox="-10 -10 240 240">
-							  <g id="g" fill="none" transform="translate(-80,-80)">
-								<circle id="background" width="100" cx="200" cy="200" r="100" />
-								<path id="arc_path" />
-								<g id="arc_path_left_wrapper" transform="rotate(0,200,200)">
-									<path id="arc_path_left" />
-								</g>
-								<g transform="translate(20,0)">
-									<text id="lives_improved_percentage" x="140" y="210" fill="#000">100%</text>
-									<text id="lives_improved_percentage_sub" x="0" y="220" fill="#000" width="200">
-										<tspan x="5.3em" dy="1.1em">of population</tspan>
-									</text>
-								</g>
-							  </g>
-								<g transform="translate(50,50)" id="down">
-									<path fill="#FFFFFF" d="M25.719,25.599c4.455-4.459,4.455-11.681-0.002-16.136c-4.453-4.457-11.679-4.458-16.133,0
-										c-4.458,4.455-4.457,11.679,0,16.136C14.04,30.054,21.266,30.055,25.719,25.599z M15.816,23.015
-										c-0.603-0.001-1.094-0.491-1.095-1.096c0.001-0.603,0.493-1.093,1.093-1.094l3.523,0.001l-6.847-6.847
-										c-0.215-0.215-0.322-0.495-0.323-0.772c0.001-0.281,0.108-0.564,0.321-0.773c0.425-0.429,1.119-0.429,1.546,0l6.848,6.849
-										l0.002-3.521c0-0.605,0.488-1.094,1.095-1.094c0.603-0.002,1.091,0.491,1.093,1.09v6.163c0,0.012-0.006,0.017-0.006,0.027
-										c-0.003,0.138-0.029,0.267-0.078,0.392c-0.05,0.115-0.123,0.215-0.207,0.305c-0.014,0.018-0.018,0.037-0.029,0.051
-										c-0.017,0.017-0.037,0.02-0.055,0.037c-0.091,0.078-0.191,0.151-0.303,0.198c-0.133,0.056-0.275,0.084-0.42,0.084L15.816,23.015z"
-										/>
-								</g>
-								<g transform="translate(50,50)" id="up">
-									<path fill="#FFFFFF" d="M25.719,9.462c-4.457-4.455-11.681-4.455-16.137,0c-4.457,4.457-4.457,11.682,0,16.137
-										c4.456,4.457,11.68,4.457,16.137,0C30.174,21.145,30.174,13.917,25.719,9.462z M23.133,19.367c0,0.604-0.49,1.094-1.093,1.094
-										c-0.604,0-1.093-0.49-1.093-1.094v-3.522l-6.85,6.848c-0.213,0.215-0.493,0.32-0.773,0.32c-0.279,0-0.561-0.105-0.774-0.32
-										c-0.427-0.426-0.427-1.119,0-1.547l6.848-6.848h-3.52c-0.603,0-1.094-0.489-1.094-1.094c0-0.604,0.491-1.093,1.094-1.093h6.161
-										c0.011,0,0.019,0.005,0.028,0.006c0.135,0.003,0.266,0.027,0.389,0.079c0.117,0.047,0.217,0.121,0.309,0.203
-										c0.015,0.014,0.035,0.018,0.049,0.031c0.016,0.017,0.02,0.038,0.035,0.055c0.081,0.09,0.152,0.188,0.199,0.301
-										c0.058,0.135,0.084,0.277,0.084,0.421V19.367z"/>
-								</g>
-							</svg>
-						</div>					
+				<div id="region_info" onclicks="objHeader.btnbackclick();">
+					<div id="region_info_wrapper">
+						<div class="svg_wrapper">
+							<div id="holder">
+								<svg id="svg_circle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="80%" height="80%" viewBox="-10 -10 240 240">
+								  <g id="g" fill="none" transform="translate(-80,-80)">
+									<circle id="background" width="100" cx="200" cy="200" r="100" />
+									<path id="arc_path" />
+									<g id="arc_path_left_wrapper" transform="rotate(0,200,200)">
+										<path id="arc_path_left" />
+									</g>
+									<g transform="translate(20,0)">
+										<text id="lives_improved_percentage" x="140" y="210" fill="#000">100%</text>
+										<text id="lives_improved_percentage_sub" x="0" y="220" fill="#000" width="200">
+											<tspan x="5.3em" dy="1.1em">of population</tspan>
+										</text>
+									</g>
+								  </g>
+									<g transform="translate(50,50)" id="down">
+										<path fill="#FFFFFF" d="M25.719,25.599c4.455-4.459,4.455-11.681-0.002-16.136c-4.453-4.457-11.679-4.458-16.133,0
+											c-4.458,4.455-4.457,11.679,0,16.136C14.04,30.054,21.266,30.055,25.719,25.599z M15.816,23.015
+											c-0.603-0.001-1.094-0.491-1.095-1.096c0.001-0.603,0.493-1.093,1.093-1.094l3.523,0.001l-6.847-6.847
+											c-0.215-0.215-0.322-0.495-0.323-0.772c0.001-0.281,0.108-0.564,0.321-0.773c0.425-0.429,1.119-0.429,1.546,0l6.848,6.849
+											l0.002-3.521c0-0.605,0.488-1.094,1.095-1.094c0.603-0.002,1.091,0.491,1.093,1.09v6.163c0,0.012-0.006,0.017-0.006,0.027
+											c-0.003,0.138-0.029,0.267-0.078,0.392c-0.05,0.115-0.123,0.215-0.207,0.305c-0.014,0.018-0.018,0.037-0.029,0.051
+											c-0.017,0.017-0.037,0.02-0.055,0.037c-0.091,0.078-0.191,0.151-0.303,0.198c-0.133,0.056-0.275,0.084-0.42,0.084L15.816,23.015z"
+											/>
+									</g>
+									<g transform="translate(50,50)" id="up">
+										<path fill="#FFFFFF" d="M25.719,9.462c-4.457-4.455-11.681-4.455-16.137,0c-4.457,4.457-4.457,11.682,0,16.137
+											c4.456,4.457,11.68,4.457,16.137,0C30.174,21.145,30.174,13.917,25.719,9.462z M23.133,19.367c0,0.604-0.49,1.094-1.093,1.094
+											c-0.604,0-1.093-0.49-1.093-1.094v-3.522l-6.85,6.848c-0.213,0.215-0.493,0.32-0.773,0.32c-0.279,0-0.561-0.105-0.774-0.32
+											c-0.427-0.426-0.427-1.119,0-1.547l6.848-6.848h-3.52c-0.603,0-1.094-0.489-1.094-1.094c0-0.604,0.491-1.093,1.094-1.093h6.161
+											c0.011,0,0.019,0.005,0.028,0.006c0.135,0.003,0.266,0.027,0.389,0.079c0.117,0.047,0.217,0.121,0.309,0.203
+											c0.015,0.014,0.035,0.018,0.049,0.031c0.016,0.017,0.02,0.038,0.035,0.055c0.081,0.09,0.152,0.188,0.199,0.301
+											c0.058,0.135,0.084,0.277,0.084,0.421V19.367z"/>
+									</g>
+								</svg>
+							</div>					
+						</div>
+						<div class="data_wrapper">
+							<div id="region_data">
+								<div id="region_lives_improved">
+									<div id="nr_lives_improved">70.3</div>
+									<div id="nr_lives_improved_label" class="lives_improved_sub">million lives improved</div>
+								</div>
+								<div id="region_gdp">
+									<div id="nr_gdp">$305 trillion</div>
+								</div>
+								<div id="region_population">
+									<div id="nr_population">70 million</div>
+								</div>
+							</div>					
+						</div>
 					</div>
-					<div class="data_wrapper">
-						<div id="region_data">
-							<div id="region_lives_improved">
-								<div id="nr_lives_improved">70.3</div>
-								<div id="nr_lives_improved_label" class="lives_improved_sub">million lives improved</div>
-							</div>
-							<div id="region_gdp">
-								<div id="nr_gdp">$305 trillion</div>
-							</div>
-							<div id="region_population">
-								<div id="nr_population">70 million</div>
-							</div>
-						</div>					
+					<div id="region_history">
+						
 					</div>
+					<div id="slider_indicator"></div>
 				</div>
 				<div id="simulation">
 					<div id="simulation_wrapper">
@@ -194,6 +200,10 @@
 		<script type="text/javascript" src="js/lib/hammer.js">//</script>
 		<script type="text/javascript" src="js/lib/sizzle.min.js">//</script>	
 		<script type="text/javascript" src="js/lib/marquee.js">//</script>	
+		<script type="text/javascript" src="js/lib/raphael.js">//</script>
+		<script type="text/javascript" src="js/lib/g.raphael.js">//</script>	
+		<script type="text/javascript" src="js/lib/g.line.js">//</script>	
+		<script type="text/javascript" src="js/lib/canvas.js">//</script>			
 		
 		<!-- Helper files files -->		
 		<script type="text/javascript" src="js/helpers/utils.js">//</script>
