small styling fixes, showing data changes in modal panel instead of alert, nr lives immproved now showing one decimal as per Robberts request

--- a/html/index.html
+++ b/html/index.html
@@ -182,6 +182,16 @@
 				
 			</div>
 		</div>
+		<div id="messages_panel" class="panel modal">
+			<div class="panel_header">
+				<h2>Messages</h2>
+				<div id="btn_close_messages" class="btn btn_close" onclick="objLogin.hidemessages(true);">X</div>
+			</div>
+			<div class="modal_content">
+				<ul  id="messagelist">
+				</ul>
+			</div>
+		</div>		
 		<div id="overlay"></div>
 		<div id="loading"></div>
 		<div id="producttree_temp"></div>
