reverted reload/refresh option

--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
 				<div id="btn_back" onclick="objHeader.btnbackclick();"></div>
 				<div id="info">
 					<div class="info_wrapper">
-						<div id="region_name"></div>
+						<div id="region_name" onclick="location.reload();"></div>
 						<div id="filter_breadcrumb_wrapper">
 							<div id="">
 								<span id="filter_breadcrumb"></span>
